--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,24 @@
                     <mainClass>com.example.Main</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-checkstyle-plugin</artifactId>
+              <version>3.3.0</version>
+              <executions>
+                <execution>
+                  <id>checkstyle-report</id>
+                  <phase>verify</phase>
+                  <goals>
+                    <goal>checkstyle</goal>
+                  </goals>
+                  <configuration>
+                    <outputFileFormat>html</outputFileFormat>
+                    <outputDirectory>${project.basedir}/output</outputDirectory>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
