Agrega ejecución de checkstyle

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -63,6 +63,17 @@ jobs:
     runs-on: unbuntu-latest
 
     steps:
+      # Paso 1: Clona el repositorio
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Paso 2: Instala Java 11 desde Temurin (recomendado por GitHub)
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+        
       - name: Chekstyle
         run:
           mvn chekstyle:chekstyle
