Agrega ejecución de checkstyle

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,14 +38,19 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
  
-      # Paso 3: Compila el proyecto Java (solo chequea sintaxis y estructura)
-      - name: Compile Java project
-        run: mvn compile
- 
-      # Paso 4: Ejecuta la clase Java que genera el archivo HTML
+      # Paso 3: Compila el proyecto Java y genera el HTML.
       # Este paso produce el contenido que se mostrará en GitHub Pages
-      - name: Generate static HTML with Java
-        run: mvn exec:java -Dexec.mainClass="com.example.Main"
+      - name: Compile and generate HTML
+        run: |
+          mvn compile
+          mvn exec:java -Dexec.mainClass="com.example.Main"
+         
+      # Paso 4: Corre el checkstyle y copia el reporte generado
+      # Este paso produce el contenido que se mostrará en GitHub Pages
+      - name: Run checkstyle and copy the report
+        run: |
+          mvn checkstyle:checkstyle
+          cp -r target/site/* output/
  
       # Paso 5: Prepara GitHub Pages para recibir los archivos
       - name: Setup Pages
@@ -58,31 +63,9 @@ jobs:
         with:
           path: 'output'
  
-  test:
-    needs: build
-    runs-on: ubuntu-latest
- 
-    steps:
-    # Paso 1: Clona el repositorio
-      - name: Checkout repository
-        uses: actions/checkout@v4
- 
-      # Paso 2: Instala Java 11 desde Temurin (recomendado por GitHub)
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
- 
-      - name: Checkstyle
-        run: |
-          mvn compile
-          mvn checkstyle:checkstyle
-          cp -r target/site/* output/
- 
   # Job separado para el despliegue
   deploy:
-    needs: test  # Este job se ejecuta solo si el job "test" fue exitoso
+    needs: build  # Este job se ejecuta solo si el job "build" fue exitoso
     runs-on: ubuntu-latest
     environment:
       name: github-pages  # Define el entorno de despliegue para Pages
